# shake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old_python.txt  CMakeSettings.json  README.md  cmake_generator_config.json  cmake_project_definition.py  generate_cmake_file.py  generate_cmake_files.py
cmake_generator/: .gitignore  README.md  __init__.py  cmake_format.py  generate_cmake_file.py  path.py  project.py  quote.py  str_cmake_config.py  str_file.py  str_import_target.py  str_list.py  str_new_target.py  str_project.py  str_string.py  target.py  target_type.py  version.py
shake_content/: .gitignore  README.md  target_definitions.json
shake_content/src/shake/content/: _readme.txt  content_manager.hpp  load_cube_map.cpp  load_cube_map.hpp  load_font.cpp  load_font.hpp  load_material.cpp  load_material.hpp  load_mesh.cpp  load_mesh.hpp  load_program.cpp  load_program.hpp  load_sprite.cpp  load_sprite.hpp  load_texture.cpp  load_texture.hpp  load_voxel_grid.cpp  load_voxel_grid.hpp
shake_core/: README.md  target_definitions.json
shake_core/src/shake/core/: _readme.txt  bounds.hpp  log.hpp  process_manager.hpp  signal.hpp
shake_core/src/shake/core/contracts/: check.hpp  contracts.hpp  contracts_detail.hpp  ensure.hpp  expect.hpp
shake_core/src/shake/core/diagnostics/: running_average_counter.hpp  stopwatch.hpp
shake_core/src/shake/core/macros/: macro_debug_only.hpp  macro_define_mapping.hpp  macro_global_property.hpp  macro_movable.hpp  macro_non_copyable.hpp  macro_property.hpp  macro_strongly_typed_alias.hpp
shake_core/src/shake/core/math/: coordinates.hpp  math.hpp  transform_2d.cpp  transform_2d.hpp  transform_3d.cpp  transform_3d.hpp
shake_core/src/shake/core/ranges/: any_range.hpp  combine_range.hpp  enumerate_range.hpp  index_range.hpp  map_range.hpp  range.hpp  step_range.hpp  transform_range.hpp
shake_core/src/shake/core/std/: array_2d.hpp  array_3d.hpp  bidirectional_map.hpp  decorator_pointer.hpp  dual_key_map.hpp  map.hpp  optional_callback.hpp  pool.hpp  queue.hpp  set.hpp  string.hpp  type_erased_map.hpp  type_key_map.hpp  variant.hpp  vector.hpp  vector_2d.hpp  vector_3d.hpp
shake_core/src/shake/core/type_traits/: hierarchical_cast.hpp  lexical_cast.hpp  tagged_type.hpp  type_id.hpp  underlying_cast.hpp
shake_ecs/: README.md  target_definitions.json
shake_ecs/src/shake/ecs/: _readme.txt  world.hpp
shake_ecs/src/shake/ecs/component/: component.hpp  component_manager.hpp  component_storage.hpp
shake_ecs/src/shake/ecs/entity/: entity.hpp  entity_filter.hpp  entity_manager.hpp
shake_ecs/src/shake/ecs/system/: render_system.cpp  render_system.hpp  system.hpp  system_manager.hpp
shake_graphics/: README.md  target_definitions.json
shake_graphics/src/shake/graphics/: _readme.txt  camera.cpp  camera.hpp  color.hpp  context.cpp  context.hpp  draw.cpp  draw.hpp  draw_text.cpp  draw_text.hpp  render_pack.hpp
shake_graphics/src/shake/graphics/assets/: font.hpp  sprite.hpp
shake_graphics/src/shake/graphics/buffer_objects/: binding_point_specification.hpp  ebo.cpp  ebo.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  vertex_format.hpp
shake_graphics/src/shake/graphics/geometry/: geometry_2d.cpp  geometry_2d.hpp  geometry_3d.cpp  geometry_3d.hpp
shake_graphics/src/shake/graphics/gl/: gl.cpp  gl.hpp  gl_context.cpp  gl_context.hpp  gl_debug_message.cpp  gl_debug_message.hpp  gl_enum.hpp  gl_int.hpp
shake_graphics/src/shake/graphics/material/: cube_map.cpp  cube_map.hpp  glsl_preprocessor.cpp  glsl_preprocessor.hpp  material.cpp  material.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture_parameters.cpp  texture_parameters.hpp  uniform.hpp  uniform_map.cpp  uniform_map.hpp
shake_hid/: README.md  target_definitions.json
shake_hid/src/shake/hid/: _readme.txt  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  window.cpp  window.hpp
shake_io/: README.md  target_definitions.json
shake_io/src/shake/io/: _readme.txt  file.cpp  file.hpp  file_json.cpp  file_json.hpp  file_reader.cpp  file_reader.hpp  path.cpp  path.hpp  serialize.hpp
shake_main/: README.md  target_definitions.json
shake_main/src/shake/main/: _readme.txt  application.cpp  application.hpp  main.cpp
shake_python/: README.md  target_definitions.py
shake_python/src/shake/python/: _readme.txt  pyshake.cpp
shake_python/src/shake/python/submodules/: macro_def_member.hpp  submodule_application.cpp  submodule_application.hpp  submodule_content.cpp  submodule_content.hpp  submodule_core.cpp  submodule_core.hpp  submodule_ecs.cpp  submodule_ecs.hpp  submodule_graphics.cpp  submodule_graphics.hpp  submodule_hid.cpp  submodule_hid.hpp  submodules.cpp  submodules.hpp
shake_test_game/: README.md
shake_test_game/cube_maps/: default_cube_map.json
shake_test_game/fonts/open_sans/: open_sans.json
shake_test_game/materials/: box.json  default_cube_map_material.json  default_voxel_material.json  sprite_material.json
shake_test_game/meshes/: box.json  cube_map.json  voxel.json  voxel_instances.json
shake_test_game/scripts/: main.py
shake_test_game/shaders/: default_cube_map_shader.glsl  default_primitive_2d_shader.glsl  default_primitive_3d_shader.glsl  default_sprite_shader.glsl  default_text_shader.glsl  default_voxel_shader.glsl
shake_test_game/sprites/: fez.json
shake_test_game/textures/: box_diffuse.json  box_specular.json  container.json  fez.json  palette.json
shake_test_game/voxel_models/: berry.vox
